--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node redesapp.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+    //"start": "node redesapp.js"
   },
   "author": "",
   "license": "ISC",
